# FALCONN

./: .gitignore  CMakeLists.txt
src/benchmark/: random_benchmark.cc
src/examples/glove/: Makefile  convert.py  glove.cc  glove_cpy.cc
src/examples/self/: Makefile  main.cc
src/examples/self/include/: lsh_nn_table.hpp
src/examples/self/include/wrapper/: cpp_wrapper_impl.hpp  data_storage_adapter.hpp
src/include/falconn/: falconn_global.h  lsh_nn_table.h
src/include/falconn/core/: bit_packed_flat_hash_table.h  bit_packed_vector.h  composite_hash_table.h  data_storage.h  euclidean_distance.h  flat_hash_table.h  hash_table_helpers.h  heap.h  hyperplane_hash.h  lsh_function_helpers.h  lsh_table.h  math_helpers.h  nn_query.h  prefetchers.h
src/include/falconn/wrapper/: cpp_wrapper_impl.h  data_storage_adapter.h
src/test/: composite_hash_table_test.cc  cpp_wrapper_test.cc  data_storage_test.cc  euclidean_distance_test.cc  hyperplane_hash_test.cc  nn_query_test.cc  test_utils.h
